src/pages/Pages.css
.about-page,
.homepage,
.contact-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 500px;
  margin: auto;
  padding: 25px;
  background-color: rgba(255, 255, 255, 0.4);
}

.contact-information {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.back-drop {
  /* background-image: url("../assets/caferelax.jpg"); */
  background-position: center;
  background-size: cover;
  height: 100%;
  margin: 0;
  display: flex;
}

.homepage {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.home-splash {
  background-image: url("../assets/cafesplash.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  filter: drop-shadow(16px 16px 20px rgba(0, 0, 0, 0.5));
  height: 400px;
  margin: 30px auto;
  width: 75%;
}

.content {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: fit-content;
  width: 100%;
}

.cart-wrapper {
  align-items: center;
  background-color: var(--card-background);
  /* border-radius: 16px; */
  /* border: 3px solid var(--card-highlight); */
  display: flex;
  filter: drop-shadow(5px 5px 5px black);
  flex-direction: column;
  font-size: 2em;
  margin: 150px auto;
  min-width: 300px;
  padding: 25px;
  width: fit-content;
  z-index: 0;
}

.cart-wrapper > button {
  filter: drop-shadow(5px 5px 5px black);
  margin: 5px;
  width: fit-content;
}

.cart-wrapper ul {
  list-style: none;
  padding: 0;
}

.cart-item {
  border-bottom: 1px dashed var(--card-label);
  margin: 10px;
}

.cancel-btn {
  width: 15px;
}

.contact-map {
  display: flex;
  width: 100%;
}

.contact-map ul {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.opening-hours {
  margin: auto;
  width: 100%;
}

.contact-map ul {
  list-style: none;
  padding: 25px;
  margin: auto;
}

.total-box {
  background-color: var(--card-highlight);
  border: 1px solid var(--card-label);
  color: var(--font-on-dark);
  margin-bottom: 15px;
  padding: 15px 15px 5px 15px;
  width: fit-content;
}

#check-out {
  border-radius: 10px;
  font-family: var(--global-font);
  font-size: 1em;
  padding: 15px 15px 5px 15px;
}

#check-out:hover {
  background-color: var(--primary-color);
  color: var(--font-on-dark);
}

#cart-clear {
  background-color: var(--primary-color);
  border-radius: 5px;
  font-family: var(--global-font);
  font-size: 0.75em;
  margin-top: 25px;
  padding: 5px 5px 2px 5px;
}

.receipt-line {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin-bottom: 5px;
  width: 100%;
}

.receipt-input,
.receipt-item {
  margin-right: auto;
}

.receipt-item {
  text-align: center;
  padding: 0 10px;
}

.receipt-input {
  align-items: center;
  background-color: var(--font-on-dark);
  border-radius: 5px;
  border: 1px solid black;
  display: flex;
  height: 30px;
  justify-content: space-between;
  padding: 2px;
  width: 75px;
}

.page-wrapper {
  display: flex;
  flex-direction: column;
  height: fit-content;
}

.page-title {
  font-size: 4em;
  padding: 0.5em;
  margin: 0 auto;
  text-transform: capitalize;
}

.menu-selection {
  display: flex;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.65);
  width: 100%;
  height: 100px;
  margin-top: 100px;
  cursor: pointer;
}

.menu-link {
  display: flex;
  align-items: center;
  height: 100%;
  padding: 25px;
}
.menu-link:hover {
  background-color: rgba(0, 0, 0, 0.55);
  color: var(--card-highlight);
}

.menu-links {
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
  justify-content: center;
  font-size: 2em;
  list-style: none;
  overflow: hidden;
}

.menu-wrapper {
  grid-column: 2;
}

.menu-active {
  background-color: rgba(0, 0, 0, 0.55);
  color: var(--card-highlight);
}

.menu-input {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 2em;
  color: var(--primary-color);
  background-color: var(--card-background);
  border: 1px solid var(--card-background);
  border-top: 0px;
  width: 100%;
  padding: 0 10px;
  border-radius: 0 0 16px 16px;
  /* filter: drop-shadow(10px 7px 4px black); */
}

.menu-input button {
  height: 50px;
  width: 75px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--primary-color);
  font-size: 2em;
  border-radius: 8px;
  margin: 5px;
}

.menu-page {
  margin-bottom: 25px;
}
@media (max-width: 780px) {
  .menu-links {
    font-size: 1.5em;
  }

  .cart-wrapper {
    padding: 15px;
  }

  .receipt-item {
    max-width: 200px;
  }

  .contact-map {
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
  }
  .contact-map li,
  ul {
    padding: 0;
  }
}

